--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+
   &__subject {
     box-sizing: border-box;
     display: block;
